Fix: update footer margin-bottom to remove the overflow

--- a/css/ingame.css
+++ b/css/ingame.css
@@ -10,7 +10,7 @@
 
 .footer {
     flex-shrink: 0;
-    margin-bottom: 20px;
+    margin-bottom: 13px;
 }
 
 /** champ card header **/
